SDEV-1306 developer dashboard risk column (#11931)
Co-authored-by: Michael MacKinnon <michaelmackinnon@MacBookPro-LD7RPYF70Q.local>